# nornir-detect

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
nornir_detect/: __init__.py  helpers.py  tasks.py
